--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SSC Chairman Meeting Requests – Age Reckoning Issue</title>
+  <title>SSC Chairman Meeting Requests – Aspirants Present Today</title>
   <style>
     .sent {
       background-color: #d3ffd3 !important;
@@ -18,39 +18,98 @@
 
   <script>
     const emails = [
-      "We respectfully request an urgent meeting with you tomorrow to discuss the SSC CGL 2025 age reckoning issue.",
-      "Sir, a group of 4–5 aspirants wish to meet you urgently regarding the unfair impact of the current age cut-off.",
-      "Please grant us a short meeting tomorrow to present our concern over the age reckoning date for CGL 2025.",
-      "We are final-attempt aspirants facing exclusion. Kindly allow us a brief discussion on the age issue tomorrow.",
-      "It’s a matter of our future. We humbly request your time tomorrow to discuss the 1 Jan 2025 age reckoning.",
-      "Sir, we are available anytime tomorrow for a brief meeting to discuss the age criteria issue in SSC CGL 2025.",
-      "We appeal for a short meeting with you to present our genuine concern regarding age reckoning for CGL 2025.",
-      "This issue has left us disqualified unfairly. We request a face-to-face meeting with you tomorrow, Sir.",
-      "Sir, please allow a small group of us to meet and explain our situation regarding age reckoning tomorrow.",
-      "We humbly seek a few minutes of your valuable time tomorrow regarding the age cut-off injustice we face.",
-      "It is our last hope, Sir. Please consider meeting us tomorrow to hear our concern about age reckoning.",
-      "Sir, aspirants like us who lost CGL 2024 due to irregularities now face disqualification again. Please meet us.",
-      "We earnestly request a chance to meet and discuss the urgency of revising the age reckoning date.",
-      "Your kind time for a quick meeting tomorrow would bring great relief to affected aspirants like us.",
-      "Please permit us to present our request in person tomorrow regarding the SSC CGL 2025 age cut-off.",
-      "We are requesting a short meeting tomorrow to discuss the serious implications of the current cut-off date.",
-      "Sir, this is a matter of eligibility and fairness. Kindly grant us time for a quick meeting tomorrow.",
-      "This issue needs human hearing. We request an in-person meeting with you tomorrow, Sir.",
-      "Sir, our sincere plea is for a fair chance. Please allow us a quick meeting tomorrow to explain.",
-      "Final-attempt candidates seek your support through a short meeting tomorrow regarding the cut-off injustice."
+      {
+        subject: "Aspirant Waiting Outside SSC Office, Request for Meeting Today",
+        body: "Respected Sir,\nAn aspirant has come from a distant state and is waiting outside your office to raise concerns about irregularities in SSC CGL 2024 and the need to consider 1st January as the age reckoning date in CGL 2025.\nWe humbly request a short meeting today to present the case."
+      },
+      {
+        subject: "Request for Meeting Today, Aspirant Present at SSC Office",
+        body: "Respected Sir,\nAn aspirant from another state is currently at your office, seeking an opportunity to present the age reckoning issue and the unfair impact of SSC CGL 2024 irregularities.\nWe request a few minutes of your time today."
+      },
+      {
+        subject: "Aspirant at SSC Office to Present Age Cut-Off Concern – Kindly Allow Meeting",
+        body: "Respected Sir,\nAn aspirant has traveled from another part of the country and is presently waiting outside your office to raise concerns about SSC CGL 2024 and the age reckoning issue.\nKindly allow a short meeting today."
+      },
+      {
+        subject: "SSC CGL 2024 Aspirant Seeking Meeting – Currently Waiting Outside Office",
+        body: "Respected Sir,\nThe aspirant is outside your office today to raise a genuine concern regarding age reckoning for SSC CGL 2025 due to CGL 2024 irregularities.\nWe request your kind attention and a brief meeting."
+      },
+      {
+        subject: "Aspirant from Another State Waiting – Kindly Grant Meeting Today",
+        body: "Respected Sir,\nAn aspirant has reached your office today from another state to submit a request regarding 1st January age cutoff and CGL 2024-related concerns.\nWe humbly request a few minutes of your valuable time."
+      },
+      {
+        subject: "Kindly Allow Short Meeting – Aspirant Present at Your Office",
+        body: "Respected Sir,\nToday, the SSC aspirant is waiting outside your office to raise the matter of age reckoning and irregularities in SSC CGL 2024.\nPlease consider granting a short meeting."
+      },
+      {
+        subject: "SSC Aspirant Waiting Outside – Requesting Urgent Meeting",
+        body: "Respected Sir,\nThe aspirant has come from a faraway state and is waiting outside your office to respectfully seek your time regarding SSC CGL 2024 irregularities and the demand for 1st January as age cutoff.\nKindly allow a short meeting today."
+      },
+      {
+        subject: "Aspirant Outside SSC Office – Request to Present Age Cut-Off Issue",
+        body: "Respected Sir,\nAn aspirant is at your office today from a different state, seeking to explain why a 1st January age cutoff is essential due to SSC CGL 2024 issues.\nWe request a brief meeting today."
+      },
+      {
+        subject: "Request for Meeting – Aspirant Present at SSC Office with Urgent Concern",
+        body: "Respected Sir,\nAn aspirant has come in person to highlight the unfair loss of final attempts due to SSC CGL 2024 irregularities.\nThey are waiting outside your office and humbly request a short meeting."
+      },
+      {
+        subject: "Kindly Grant Meeting Today – Aspirant Waiting Outside with Age Cut-Off Demand",
+        body: "Respected Sir,\nToday, an aspirant has come from another state and is waiting at your office with the hope of presenting the age reckoning concern linked to SSC CGL 2024.\nPlease allow a short meeting."
+      },
+      {
+        subject: "Aspirant Has Reached SSC Office Today – Kindly Hear the Request",
+        body: "Respected Sir,\nToday, an aspirant from a different part of the country is at your office to raise the issue of age cutoff and irregularities in SSC CGL 2024.\nWe humbly request a few minutes of your time for a meeting."
+      },
+      {
+        subject: "Aspirant Waiting to Be Heard Today – Request for Meeting",
+        body: "Respected Sir,\nAn aspirant is present outside your office today with the hope of discussing a crucial concern affecting many due to SSC CGL 2024 irregularities.\nPlease grant a short meeting."
+      },
+      {
+        subject: "Aspirant Is at SSC Office – Request to Hear Age Reckoning Issue",
+        body: "Respected Sir,\nAn aspirant has traveled from far to wait outside your office and present a genuine request regarding age reckoning and SSC CGL 2024 irregularities.\nKindly allow a meeting today."
+      },
+      {
+        subject: "Aspirant Present at Office to Submit Appeal – Kindly Grant Time Today",
+        body: "Respected Sir,\nAn aspirant is gathered outside your office today to appeal for fair age reckoning in light of SSC CGL 2024 irregularities.\nWe sincerely request a few minutes to share the concern."
+      },
+      {
+        subject: "Aspirant Seeking Meeting Today – Currently at SSC Office",
+        body: "Respected Sir,\nAn aspirant is at your office today to raise a valid concern about age cutoff and process issues in SSC CGL 2024.\nPlease grant time to explain the request in person."
+      },
+      {
+        subject: "Urgent Matter – Aspirant Waiting Outside to Present Request",
+        body: "Respected Sir,\nAn aspirant who has come from another state is waiting outside your office to discuss the impact of SSC CGL 2024 irregularities and seek reconsideration of the age cutoff.\nWe respectfully request a meeting today."
+      },
+      {
+        subject: "Kindly Grant Meeting Today – Aspirant Waiting to Submit Age Cut-Off Concern",
+        body: "Respected Sir,\nAn aspirant is outside your office today, requesting to be heard on the urgent matter of SSC CGL 2024 and the need for a fair age reckoning policy.\nPlease allow a short meeting."
+      },
+      {
+        subject: "SSC Aspirant Present at Office – Requesting Your Time Today",
+        body: "Respected Sir,\nAn aspirant is assembled today at your office to discuss how SSC CGL 2024 irregularities affected final attempts and why 1st January should be the age cutoff.\nPlease give a few minutes to explain."
+      },
+      {
+        subject: "Time-Sensitive Appeal – Aspirant Waiting Outside Office",
+        body: "Respected Sir,\nAn aspirant is physically present at your office today to raise a time-sensitive issue concerning SSC CGL 2024 irregularities and age reckoning for affected candidates.\nWe humbly request a meeting."
+      },
+      {
+        subject: "Request for Today’s Meeting – Aspirant Waiting to Present Grievance",
+        body: "Respected Sir,\nAn aspirant is gathered outside your office to explain how process lapses in SSC CGL 2024 affected many candidates. We seek justice through fair age reckoning.\nKindly allow a short meeting today."
+      }
     ];
 
     const container = document.getElementById('buttonsContainer');
-    emails.forEach((bodyLine, i) => {
-      const subject = `Urgent Meeting Request – SSC CGL 2025 Age Reckoning Issue [Appeal ${i + 1}]`;
-      const fullBody = `Respected Chairman Sir,\n\n${bodyLine}\n\nWe assure you it will be brief, respectful, and only 4–5 aspirants will attend. The exam is scheduled from 13 to 30 August 2025, and this matter is crucial for us.\n\nSubmitted by: amarsung915@gmail.com\nContact: +91-8219239139\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants`;
-      
+    emails.forEach((email, i) => {
+      const fullBody = `${email.body}\n\nSincerely,\nConcerned SSC CGL 2024 Aspirant\nContact: +91-8219239139`;
+
       const button = document.createElement('button');
       button.textContent = `📩 Email ${i + 1}`;
       button.style = "font-size: 16px; padding: 10px 20px;";
       button.onclick = () => {
         const to = encodeURIComponent("chairman@ssc.nic.in,chairmanssc@gmail.com");
-        const mailSubject = encodeURIComponent(subject);
+        const mailSubject = encodeURIComponent(email.subject);
         const mailBody = encodeURIComponent(fullBody);
         window.location.href = `mailto:${to}?subject=${mailSubject}&body=${mailBody}`;
         button.classList.add('sent');
